<resources>
    <string name="action_up">Move up</string>
    <string name="action_down">Move down</string>
    <string name="action_delete">Delete</string>
    <string name="add">Add</string>
    <string name="app_name">TimeKeeper</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="merge_audio">Merge audio</string>
    <string name="overview_action_tap">Tap</string>
    <string name="overview_action_settings">Settings</string>
    <string name="overview_action_folder">Select folder …</string>
    <string name="overview_action_merge_audio">Merge audio …</string>
    <string name="overview_action_addplaylist">Add playlist</string>
    <string name="overview_action_up">Move up</string>
    <string name="overview_action_down">Move down</string>
    <string name="overview_action_delete">Delete</string>
    <string name="overview_addplaylist_add">Add</string>
    <string name="overview_addplaylist_cancel">Cancel</string>
    <string name="overview_addplaylist_name">Name</string>
    <string name="overview_delete_message">Delete selected playlists?</string>
    <string name="overview_delete_yes">Delete</string>
    <string name="overview_delete_no">Cancel</string>
    <string name="playlist">Playlist</string>
    <string name="playlist_action_edit">Edit playlist</string>
    <string name="playlistedit">Edit playlist</string>
    <string name="playlistedit_action_addsection">Add section</string>
    <string name="playlistedit_action_addsong">Add song</string>
    <string name="playlistedit_action_done">Done</string>
    <string name="playlistedit_action_details">Details ...</string>
    <string name="playlistedit_action_copy">Copy playlist</string>
    <string name="playlistedit_action_insertfrom">Insert from ...</string>
    <string name="playlistedit_action_sort">Sort</string>
    <string name="playlistedit_action_normalmode">Normal mode</string>
    <string name="playlistedit_action_sendtop">Send to top</string>
    <string name="playlistedit_action_sendbottom">Send to bottom</string>
    <string name="playlistedit_action_editsong">Edit song</string>
    <string name="playlistedit_action_delete_and_above">Delete and all above</string>
    <string name="playlistedit_sections">Sections</string>
    <string name="playlistedit_section_barcount">Bar count</string>
    <string name="playlistedit_section_cue">Cue</string>
    <string name="playlistedit_song_name">Name</string>
    <string name="playlistedit_select_stereo_track">Stereo track</string>
    <string name="playlistedit_clear_stereo_track">Clear</string>
    <string name="playlistedit_select_mono_track">Mono track</string>
    <string name="playlistedit_clear_mono_track">Clear</string>
    <string name="playlistedit_score_link">Score link</string>
    <string name="playlistedit_song_tempo">Tempo</string>
    <string name="playlistedit_details_name">Name</string>
    <string name="playlistedit_details_stereo">Stereo</string>
    <string name="playlistedit_details_announce_title">Announce song titles</string>
    <string name="playlistedit_details_save">Save</string>
    <string name="playlistedit_details_cancel">Cancel</string>
    <string name="playlistedit_copy_name">Name</string>
    <string name="playlistedit_copy_copy">Copy</string>
    <string name="playlistedit_copy_cancel">Cancel</string>
    <string name="playlistedit_editsong_save">Save</string>
    <string name="playlistedit_editsong_cancel">Cancel</string>
    <string name="playlistedit_delete_message">Delete selected songs?</string>
    <string name="playlistedit_delete_and_above_message">Delete selected songs and all above?</string>
    <string name="playlistedit_delete_yes">Delete</string>
    <string name="playlistedit_delete_no">Cancel</string>
    <string name="tap">Tap</string>
    <string name="tap_count_off">Count off</string>
    <string name="tap_two_bar_count_off">Two bars</string>
    <string name="settings">Settings</string>
    <string name="service_description">TimeKeeper metronome</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="next">Next</string>
    <string name="pref_title_frequency">Frequency</string>
    <string name="pref_summary_frequency">The frequency of the beep in Hz</string>
    <string name="pref_title_duration">Duration</string>
    <string name="pref_summary_duration">The duration of the beep in ms</string>
    <string name="pref_title_mainvolume">Main volume</string>
    <string name="pref_summary_mainvolume">Volume of metronome</string>
    <string name="pref_title_divisionfrequency">Division frequency</string>
    <string name="pref_summary_divisionfrequency">The frequency of subdivisions in Hz</string>
    <string name="pref_title_divisionvolume">Subdivision volume</string>
    <string name="pref_summary_divisionvolume">Relative volume of subdivisions</string>
    <string name="pref_title_screenorientation">Screen orientation</string>
    <string name="pref_summary_screenorientation">The screen will be locked in this orientation.</string>
    <string-array name="pref_entryvalues_screenorientation">
        <item>10</item>
        <item>1</item>
        <item>0</item>
        <item>9</item>
        <item>8</item>
    </string-array>
    <string-array name="pref_entries_screenorientation">
        <item>Automatic</item>
        <item>Portrait</item>
        <item>Landscape</item>
        <item>Reverse portrait</item>
        <item>Reverse landscape</item>
    </string-array>
    <string name="pref_title_autoplay">Autoplay</string>
    <string name="pref_summary_autoplay">Start metronome when selecting song or pressing next.</string>
    <string name="pref_title_showultranetrouting">Show Ultranet routing</string>
    <string name="pref_summary_showultranetrouting">Show scribble strips of P16 Ultranet channels on playlist</string>
    <string name="pref_title_outputdevice">Output device</string>
    <string name="pref_summary_outputdevice">Select the preferred output device.</string>
    <string-array name="pref_entryvalues_outputdevice" />
    <string-array name="pref_entries_outputdevice" />
</resources>
