<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <EditTextPreference
		android:key="frequency"
		android:title="@string/pref_title_frequency"
		android:summary="@string/pref_summary_frequency"
		android:inputType="number"
		android:defaultValue="880"
		 />
    <EditTextPreference
		android:key="duration"
		android:title="@string/pref_title_duration"
		android:summary="@string/pref_summary_duration"
		android:inputType="number"
		android:defaultValue="20"
		/>
    <ListPreference
        android:key="screenorientation"
        android:title="@string/pref_title_screenorientation"
        android:summary="@string/pref_summary_screenorientation"
        android:entries="@array/pref_entries_screenorientation"
        android:entryValues="@array/pref_entrievalues_screenorientation"
        android:defaultValue="10"
        />
	<CheckBoxPreference
		android:key="autoplay"
		android:title="@string/pref_title_autoplay"
		android:summary="@string/pref_summary_autoplay"
		android:defaultValue="true"
		/>
</PreferenceScreen>
