<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item android:id="@+id/playlistedit_action_renameplaylist"
          android:icon="@drawable/ic_pencil"
          android:title="@string/playlistedit_action_renameplaylist"
          app:showAsAction="never" />
	<item android:id="@+id/playlistedit_action_copy"
          android:icon="@drawable/ic_content_copy"
          android:title="@string/playlistedit_action_copy"
          app:showAsAction="never" />
	<item android:id="@+id/playlistedit_action_normalmode"
		android:icon="@drawable/ic_pencil"
		android:title="@string/playlistedit_action_normalmode"
		app:showAsAction="never" />
	<item android:id="@+id/playlistedit_action_sendtop"
		android:icon="@drawable/ic_arrow_up"
		android:title="@string/playlistedit_action_sendtop"
		app:showAsAction="never" />
	<item android:id="@+id/playlistedit_action_sendbottom"
		android:icon="@drawable/ic_arrow_down"
		android:title="@string/playlistedit_action_sendbottom"
		app:showAsAction="never" />
</menu>
